# ModularDNS

./: LICENSE  README.md  pyproject.toml  run_unittest.py  setup.py
.github/workflows/: test-and-release.yaml
ModularDNS/: Exceptions.py  LockwSLD.py  Logger.py  ModuleManager.py  ModuleManagerLoader.py  SignalHandler.py  __init__.py  __main__.py
ModularDNS/Downstream/: DownstreamCollection.py  Handler.py  HandlerByQuestion.py  ModuleManagerLoader.py  QuickLookup.py  Utils.py
ModularDNS/Downstream/Local/: Cache.py  Hosts.py  ModuleManagerLoader.py  __init__.py
ModularDNS/Downstream/Logical/: ConstAns.py  Failover.py  LimitConcurrentReq.py  ModuleManagerLoader.py  QtAnsLog.py  QuestionRule.py  QuestionRuleSet.py  RaiseExcept.py  RandomChoice.py
ModularDNS/Downstream/Remote/: ByProtocol.py  ConcurrentMgr.py  Endpoint.py  HTTPS.py  HTTPSAdapters.py  ModuleManagerLoader.py  Protocol.py  Remote.py  TCP.py  UDP.py
ModularDNS/MsgEntry/: AddEntry.py  AnsEntry.py  MsgEntry.py  QuestionEntry.py  __init__.py
ModularDNS/Server/: ModuleManagerLoader.py  PySocketServer.py  Server.py  ServerCollection.py  TCP.py  UDP.py  Utils.py
ModularDNS/Service/: Resolver.py
examples/: config-resolve.json
tests/unittesting/: TestExceptions.py  TestModuleManagerLoaders.py  TestModules.py  TestSelfLock.py  __init__.py
tests/unittesting/Downstream/: BlockingHandler.py  TestDownstreamCollection.py  TestEndpoint.py  TestHosts.py  TestLocalCache.py  TestLocalHosts.py  TestLogicalConstAns.py  TestLogicalFailover.py  TestLogicalLimitConcurrentReq.py  TestLogicalNameRule.py  TestRemote.py  (+11 more)
(+7 files in other folders)
